(HJH)PostResponseDto 필드 수정